--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+URL: https://github.com/nicholasjhorton/foo2
+BugReports: https://github.com/nicholasjhorton/foo2/issues
